# QuickShorts

./: .gitignore  README.md  llm.py  main.py  main.py.old  pyproject.toml
src/quick_short_JamesStandbridge/llm/: openai_chat.py  quotes_generator.py
src/quick_short_JamesStandbridge/scapping/: audio_scrap.py  video_scrap.py
src/quick_short_JamesStandbridge/video_generator/: quotes_video_generator.py
